spec: get table under namespace
