# java/lance-catalog-springboot-server/src/main/java/com/lancedb/lance/catalog/server/springboot/api/NamespaceApi.java
@@ -17,6 +17,7 @@ import com.lancedb.lance.catalog.server.springboot.model.CreateNamespaceRequest;
 import com.lancedb.lance.catalog.server.springboot.model.CreateNamespaceResponse;
 import com.lancedb.lance.catalog.server.springboot.model.ErrorModel;
 import com.lancedb.lance.catalog.server.springboot.model.GetNamespaceResponse;
+import com.lancedb.lance.catalog.server.springboot.model.GetTableResult;
 import com.lancedb.lance.catalog.server.springboot.model.ListNamespacesResponse;
 
 import io.swagger.v3.oas.annotations.Operation;
@@ -403,6 +404,146 @@ public interface NamespaceApi {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
                   String exampleString =
                       "{ \"namespace\" : \"namespace\", \"properties\" : { \"owner\" : \"Ralph\", \"created_at\" : \"1452120468\" } }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+              }
+            });
+    return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+  }
+
+  /**
+   * GET /v1/namespaces/{ns}/tables/{table} : Get a table from the catalog Get a table&#39;s
+   * detailed properties under a specified namespace from the catalog.\&quot;.
+   *
+   * @param ns The name of the namespace. (required)
+   * @param table A table name. (required)
+   * @return Table properties result when loading a table (status code 200) or Indicates a bad
+   *     request error. It could be caused by an unexpected request body format or other forms of
+   *     request validation failure, such as invalid json. Usually serves application/json content,
+   *     although in some cases simple text/plain content might be returned by the server&#39;s
+   *     middleware. (status code 400) or Forbidden. Authenticated user does not have the necessary
+   *     permissions. (status code 403) or A server-side problem that means can not find the
+   *     specified resource. (status code 404) or The service is not ready to handle the request.
+   *     The client should wait and retry. The service may additionally send a Retry-After header to
+   *     indicate when to retry. (status code 503) or A server-side problem that might not be
+   *     addressable from the client side. Used for server 5xx errors without more specific
+   *     documentation in individual routes. (status code 5XX)
+   */
+  @Operation(
+      operationId = "getTable",
+      summary = "Get a table from the catalog",
+      description =
+          "Get a table's detailed properties under a specified namespace from the catalog.\".",
+      tags = {"Namespace"},
+      responses = {
+        @ApiResponse(
+            responseCode = "200",
+            description = "Table properties result when loading a table",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = GetTableResult.class))
+            }),
+        @ApiResponse(
+            responseCode = "400",
+            description =
+                "Indicates a bad request error. It could be caused by an unexpected request body format or other forms of request validation failure, such as invalid json. Usually serves application/json content, although in some cases simple text/plain content might be returned by the server's middleware.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorModel.class))
+            }),
+        @ApiResponse(
+            responseCode = "403",
+            description = "Forbidden. Authenticated user does not have the necessary permissions.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorModel.class))
+            }),
+        @ApiResponse(
+            responseCode = "404",
+            description = "A server-side problem that means can not find the specified resource.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorModel.class))
+            }),
+        @ApiResponse(
+            responseCode = "503",
+            description =
+                "The service is not ready to handle the request. The client should wait and retry. The service may additionally send a Retry-After header to indicate when to retry.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorModel.class))
+            }),
+        @ApiResponse(
+            responseCode = "5XX",
+            description =
+                "A server-side problem that might not be addressable from the client side. Used for server 5xx errors without more specific documentation in individual routes.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorModel.class))
+            })
+      })
+  @RequestMapping(
+      method = RequestMethod.GET,
+      value = "/v1/namespaces/{ns}/tables/{table}",
+      produces = {"application/json"})
+  default ResponseEntity<GetTableResult> getTable(
+      @Parameter(
+              name = "ns",
+              description = "The name of the namespace.",
+              required = true,
+              in = ParameterIn.PATH)
+          @PathVariable("ns")
+          String ns,
+      @Parameter(
+              name = "table",
+              description = "A table name.",
+              required = true,
+              in = ParameterIn.PATH)
+          @PathVariable("table")
+          String table) {
+    getRequest()
+        .ifPresent(
+            request -> {
+              for (MediaType mediaType : MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString = "{ \"properties\" : { \"key\" : \"properties\" } }";
                   ApiUtil.setExampleResponse(request, "application/json", exampleString);
                   break;
                 }
